--- a/web/sites/default/config/views.view.group_news.yml
+++ b/web/sites/default/config/views.view.group_news.yml
@@ -6,16 +6,15 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.storage.node.field_body
   module:
-    - datetime
     - entity_reference_revisions
     - group
     - node
     - user
 id: group_news
-label: 'Group: news'
+label: 'Group news'
 module: views
 description: 'A set of views to help show news that are related to a group.'
-tag: Group
+tag: ''
 base_table: node_field_data
 base_field: nid
 core: 8.x
@@ -44,7 +43,7 @@ display:
       exposed_form:
         type: basic
         options:
-          submit_button: Filter
+          submit_button: Apply
           reset_button: false
           reset_button_label: Reset
           exposed_sorts_label: 'Sort by'
@@ -75,7 +74,7 @@ display:
       style:
         type: default
         options:
-          row_class: ''
+          row_class: mb-3
           default_row_class: false
           uses_fields: false
       row:
@@ -149,147 +148,21 @@ display:
           field_api_classes: false
       filters:
         status:
-          id: status
+          value: '1'
           table: node_field_data
           field: status
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: '='
-          value: '1'
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
           plugin_id: boolean
           entity_type: node
           entity_field: status
-        field_feature_until_value:
-          id: field_feature_until_value
-          table: node__field_feature_until
-          field: field_feature_until_value
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: '<='
-          value:
-            min: ''
-            max: ''
-            value: now
-            type: offset
-          group: 2
-          exposed: false
+          id: status
           expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
             operator: ''
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-            placeholder: ''
-            min_placeholder: ''
-            max_placeholder: ''
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          plugin_id: datetime
-        field_feature_until_value_1:
-          id: field_feature_until_value_1
-          table: node__field_feature_until
-          field: field_feature_until_value
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: empty
-          value:
-            min: ''
-            max: ''
-            value: ''
-            type: date
-          group: 2
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-            placeholder: ''
-            min_placeholder: ''
-            max_placeholder: ''
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          plugin_id: datetime
+          group: 1
       sorts:
-        field_published_on_value:
-          id: field_published_on_value
-          table: node__field_published_on
-          field: field_published_on_value
-          relationship: none
-          group_type: group
-          admin_label: ''
-          order: DESC
-          exposed: false
-          expose:
-            label: ''
-          granularity: second
-          plugin_id: datetime
-        created:
-          id: created
+        changed:
+          id: changed
           table: node_field_data
-          field: created
+          field: changed
           relationship: none
           group_type: group
           admin_label: ''
@@ -299,9 +172,9 @@ display:
             label: ''
           granularity: second
           entity_type: node
-          entity_field: created
+          entity_field: changed
           plugin_id: date
-      title: 'News and notices'
+      title: News
       header: {  }
       footer: {  }
       empty: {  }
@@ -371,14 +244,6 @@ display:
           entity_field: gid
           plugin_id: group_id
       display_extenders: {  }
-      use_more: false
-      use_more_always: false
-      use_more_text: 'More news and notices'
-      filter_groups:
-        operator: AND
-        groups:
-          1: AND
-          2: OR
     cache_metadata:
       max-age: -1
       contexts:
@@ -390,17 +255,33 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       tags: {  }
-  attachment_1:
-    display_plugin: attachment
-    id: attachment_1
-    display_title: Featured
-    position: 3
+  block_1:
+    display_plugin: block
+    id: block_1
+    display_title: Block
+    position: 1
     display_options:
       display_extenders: {  }
-      displays:
-        block_1: block_1
-        page_1: page_1
-      attachment_position: before
+      block_description: 'Group news'
+    cache_metadata:
+      max-age: -1
+      contexts:
+        - 'languages:language_content'
+        - 'languages:language_interface'
+        - route
+        - url
+        - url.query_args
+        - 'user.node_grants:view'
+        - user.permissions
+      tags: {  }
+  page_1:
+    display_plugin: page
+    id: page_1
+    display_title: Page
+    position: 2
+    display_options:
+      display_extenders: {  }
+      path: group/%group/news
       filters:
         status:
           value: '1'
@@ -413,122 +294,16 @@ display:
           expose:
             operator: ''
           group: 1
-        field_feature_until_value:
-          id: field_feature_until_value
-          table: node__field_feature_until
-          field: field_feature_until_value
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: '>='
-          value:
-            min: ''
-            max: ''
-            value: now
-            type: date
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-            placeholder: ''
-            min_placeholder: ''
-            max_placeholder: ''
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          plugin_id: datetime
       defaults:
         filters: false
         filter_groups: false
+        arguments: false
+        fields: false
+        header: false
       filter_groups:
         operator: AND
         groups:
           1: AND
-      display_description: ''
-      pager:
-        type: some
-        options:
-          items_per_page: 6
-          offset: 0
-    cache_metadata:
-      max-age: -1
-      contexts:
-        - 'languages:language_content'
-        - 'languages:language_interface'
-        - route
-        - url
-        - 'user.node_grants:view'
-        - user.permissions
-      tags: {  }
-  block_1:
-    display_plugin: block
-    id: block_1
-    display_title: Block
-    position: 1
-    display_options:
-      display_extenders: {  }
-      block_description: 'Group news'
-      pager:
-        type: some
-        options:
-          items_per_page: 5
-          offset: 0
-      defaults:
-        pager: false
-        link_display: false
-        link_url: false
-        use_more: false
-        use_more_always: false
-        use_more_text: false
-      link_display: page_1
-      link_url: ''
-      use_more: true
-      use_more_always: false
-      use_more_text: 'More news and notices'
-    cache_metadata:
-      max-age: -1
-      contexts:
-        - 'languages:language_content'
-        - 'languages:language_interface'
-        - route
-        - url
-        - 'user.node_grants:view'
-        - user.permissions
-      tags: {  }
-  page_1:
-    display_plugin: page
-    id: page_1
-    display_title: Page
-    position: 2
-    display_options:
-      display_extenders: {  }
-      path: group/%group/news
-      defaults:
-        filters: true
-        filter_groups: true
-        arguments: false
-        fields: false
-        header: false
-        pager: false
       arguments:
         gid:
           id: gid
@@ -836,13 +611,8 @@ display:
           group_type: group
           admin_label: ''
           empty: false
-          content: '@total news and notices'
+          content: '@total news articles found'
           plugin_id: result
-      pager:
-        type: some
-        options:
-          items_per_page: 6
-          offset: 0
     cache_metadata:
       max-age: -1
       contexts:
@@ -850,8 +620,8 @@ display:
         - 'languages:language_interface'
         - route
         - url
+        - url.query_args
         - 'user.node_grants:view'
         - user.permissions
       tags:
         - 'config:field.storage.node.field_body'
-        - extensions
