--- a/web/sites/default/config/field.field.media.image.image.yml
+++ b/web/sites/default/config/field.field.media.image.image.yml
@@ -25,7 +25,7 @@ translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
-  file_directory: ''
+  file_directory: '[date:custom:Y]-[date:custom:m]'
   file_extensions: 'png gif jpg jpeg'
   max_filesize: ''
   max_resolution: ''
