--- a/web/sites/default/config/views.view.group_news.yml
+++ b/web/sites/default/config/views.view.group_news.yml
@@ -273,6 +273,11 @@ display:
             default_group_multiple: {  }
             group_items: {  }
           plugin_id: datetime
+        field_feature_this_content_value:
+          id: field_feature_this_content_value
+          table: node__field_feature_this_content
+          field: field_feature_this_content_value
+          plugin_id: boolean
       sorts:
         field_published_on_value:
           id: field_published_on_value
@@ -456,6 +461,42 @@ display:
             default_group_multiple: {  }
             group_items: {  }
           plugin_id: datetime
+        field_feature_this_content_value:
+          id: field_feature_this_content_value
+          table: node__field_feature_this_content
+          field: field_feature_this_content_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '='
+          value: '1'
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: boolean
       defaults:
         filters: false
         filter_groups: false
@@ -570,6 +611,42 @@ display:
           plugin_id: boolean
           entity_type: node
           entity_field: status
+        field_feature_this_content_value:
+          id: field_feature_this_content_value
+          table: node__field_feature_this_content
+          field: field_feature_this_content_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '='
+          value: '1'
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: boolean
         field_feature_until_value:
           id: field_feature_until_value
           table: node__field_feature_until
@@ -583,7 +660,7 @@ display:
             max: ''
             value: now
             type: offset
-          group: 2
+          group: 1
           exposed: false
           expose:
             operator_id: ''
@@ -617,7 +694,6 @@ display:
         operator: AND
         groups:
           1: AND
-          2: OR
       block_hide_empty: true
     cache_metadata:
       max-age: -1
@@ -638,8 +714,8 @@ display:
       display_extenders: {  }
       path: group/%group/news
       defaults:
-        filters: true
-        filter_groups: true
+        filters: false
+        filter_groups: false
         arguments: false
         fields: false
         header: false
@@ -942,22 +1018,178 @@ display:
           separator: ''
           field_api_classes: false
           plugin_id: field
-      header:
-        result:
-          id: result
-          table: views
-          field: result
-          relationship: none
-          group_type: group
-          admin_label: ''
-          empty: false
-          content: '@total news and notices'
-          plugin_id: result
+      header: {  }
       pager:
         type: some
         options:
           items_per_page: 20
           offset: 0
+      filters:
+        status:
+          id: status
+          table: node_field_data
+          field: status
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '='
+          value: '1'
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: boolean
+          entity_type: node
+          entity_field: status
+        field_feature_until_value_1:
+          id: field_feature_until_value_1
+          table: node__field_feature_until
+          field: field_feature_until_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: empty
+          value:
+            min: ''
+            max: ''
+            value: ''
+            type: date
+          group: 2
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            placeholder: ''
+            min_placeholder: ''
+            max_placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: datetime
+        field_feature_until_value:
+          id: field_feature_until_value
+          table: node__field_feature_until
+          field: field_feature_until_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '<='
+          value:
+            min: ''
+            max: ''
+            value: now
+            type: offset
+          group: 2
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            placeholder: ''
+            min_placeholder: ''
+            max_placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: datetime
+        field_feature_this_content_value:
+          id: field_feature_this_content_value
+          table: node__field_feature_this_content
+          field: field_feature_this_content_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '!='
+          value: '1'
+          group: 2
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: boolean
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
+          2: OR
     cache_metadata:
       max-age: -1
       contexts:
