--- a/web/sites/default/config/facets.facet.aggregated_topic.yml
+++ b/web/sites/default/config/facets.facet.aggregated_topic.yml
@@ -11,17 +11,14 @@ name: 'Results by topic'
 url_alias: aggregated_topic
 weight: 0
 min_count: 1
-show_only_one_result: false
+show_only_one_result: true
 field_identifier: aggregated_topic
 facet_source_id: 'search_api:search_api_page__search_portland_gov'
 widget:
-  type: links
+  type: dropdown
   config:
     show_numbers: true
-    soft_limit: 0
-    soft_limit_settings:
-      show_less_label: 'Show less'
-      show_more_label: 'Show more'
+    default_option_label: Choose
 query_operator: and
 use_hierarchy: false
 expand_hierarchy: false
@@ -30,12 +27,6 @@ hard_limit: 0
 exclude: false
 only_visible_when_facet_source_is_visible: true
 processor_configs:
-  active_widget_order:
-    processor_id: active_widget_order
-    weights:
-      sort: 20
-    settings:
-      sort: DESC
   count_widget_order:
     processor_id: count_widget_order
     weights:
