--- a/web/sites/default/config/facets.facet.services_by_topic.yml
+++ b/web/sites/default/config/facets.facet.services_by_topic.yml
@@ -12,17 +12,14 @@ name: 'Services by topic'
 url_alias: services_by_topic
 weight: 0
 min_count: 1
-show_only_one_result: false
+show_only_one_result: true
 field_identifier: name_topics
 facet_source_id: 'search_api:views_page__services_index__page_1'
 widget:
-  type: links
+  type: dropdown
   config:
     show_numbers: true
-    soft_limit: 0
-    soft_limit_settings:
-      show_less_label: 'Show less'
-      show_more_label: 'Show more'
+    default_option_label: Choose
 query_operator: and
 use_hierarchy: false
 expand_hierarchy: false
@@ -31,12 +28,6 @@ hard_limit: 0
 exclude: false
 only_visible_when_facet_source_is_visible: false
 processor_configs:
-  active_widget_order:
-    processor_id: active_widget_order
-    weights:
-      sort: -9
-    settings:
-      sort: ASC
   count_limit:
     processor_id: count_limit
     weights:
