--- a/web/sites/default/config/block.block.views_block__group_news_block_1.yml
+++ b/web/sites/default/config/block.block.views_block__group_news_block_1.yml
@@ -35,6 +35,7 @@ visibility:
     group_types:
       bureau_office: bureau_office
       elected_official: elected_official
+      program: program
       project: project
     negate: false
     context_mapping:
