--- a/web/sites/default/config/core.entity_form_display.group.elected_official.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.elected_official.default.yml
@@ -14,6 +14,7 @@ dependencies:
     - field.field.group.elected_official.field_enable_projects_menu_item
     - field.field.group.elected_official.field_legacy_path
     - field.field.group.elected_official.field_logo
+    - field.field.group.elected_official.field_menu_link
     - field.field.group.elected_official.field_official_title
     - field.field.group.elected_official.field_phone
     - field.field.group.elected_official.field_shortname_or_acronym
@@ -26,6 +27,7 @@ dependencies:
     - field_group
     - image
     - maxlength
+    - menu_link
 third_party_settings:
   field_group:
     group_contact_information:
@@ -68,8 +70,7 @@ mode: default
 content:
   field_address:
     weight: 6
-    settings:
-      default_country: null
+    settings: {  }
     third_party_settings: {  }
     type: address_default
     region: content
@@ -135,7 +136,7 @@ content:
     type: boolean_checkbox
     region: content
   field_legacy_path:
-    weight: 13
+    weight: 9
     settings:
       size: 60
       placeholder: ''
@@ -150,6 +151,12 @@ content:
       progress_indicator: throbber
     region: content
     third_party_settings: {  }
+  field_menu_link:
+    weight: 8
+    settings: {  }
+    third_party_settings: {  }
+    type: menu_link_default
+    region: content
   field_official_title:
     weight: 1
     settings:
