--- a/web/sites/default/config/core.entity_view_display.group.elected_official.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.elected_official.default.yml
@@ -14,6 +14,7 @@ dependencies:
     - field.field.group.elected_official.field_enable_projects_menu_item
     - field.field.group.elected_official.field_legacy_path
     - field.field.group.elected_official.field_logo
+    - field.field.group.elected_official.field_menu_link
     - field.field.group.elected_official.field_official_title
     - field.field.group.elected_official.field_phone
     - field.field.group.elected_official.field_shortname_or_acronym
@@ -21,6 +22,7 @@ dependencies:
     - group.type.elected_official
   module:
     - ds
+    - menu_link
 third_party_settings:
   ds:
     layout:
@@ -39,6 +41,14 @@ targetEntityType: group
 bundle: elected_official
 mode: default
 content:
+  field_menu_link:
+    weight: 3
+    label: above
+    settings:
+      link_to_target: true
+    third_party_settings: {  }
+    type: menu_link
+    region: content
   field_official_title:
     type: string
     weight: 0
