--- a/web/sites/default/config/field.storage.group.field_menu_link.yml
+++ b/web/sites/default/config/field.storage.group.field_menu_link.yml
@@ -8,7 +8,7 @@ dependencies:
     - menu_link
 third_party_settings:
   field_permissions:
-    permission_type: public
+    permission_type: custom
 id: group.field_menu_link
 field_name: field_menu_link
 entity_type: group
