--- a/web/sites/default/config/views.view.group_events_test.yml
+++ b/web/sites/default/config/views.view.group_events_test.yml
@@ -1,4 +1,4 @@
-uuid: 575680c3-e830-46f1-86d8-6b69182ad8ae
+uuid: 83e3299e-7772-42ba-b81d-4bb36efa0264
 langcode: en
 status: true
 dependencies:
@@ -16,8 +16,8 @@ dependencies:
     - node
     - time_field
     - user
-id: group_events
-label: 'Group: Events'
+id: group_events_test
+label: 'Group: Events test'
 module: views
 description: 'A list of events in a group'
 tag: Group
@@ -613,98 +613,6 @@ display:
           entity_field: type
           plugin_id: bundle
           group: 1
-        field_end_date_value:
-          id: field_end_date_value
-          table: node__field_end_date
-          field: field_end_date_value
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: '>='
-          value:
-            min: ''
-            max: ''
-            value: today
-            type: date
-          group: 2
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-            placeholder: ''
-            min_placeholder: ''
-            max_placeholder: ''
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          plugin_id: datetime
-        field_start_date_value:
-          id: field_start_date_value
-          table: node__field_start_date
-          field: field_start_date_value
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: between
-          value:
-            min: today
-            max: '+30 days'
-            value: today
-            type: date
-          group: 2
-          exposed: true
-          expose:
-            operator_id: field_start_date_value_op
-            label: 'Start date between'
-            description: ''
-            use_operator: false
-            operator: field_start_date_value_op
-            identifier: field_start_date_value
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
-              sitewide_editor: '0'
-            placeholder: ''
-            min_placeholder: ''
-            max_placeholder: ''
-          is_grouped: false
-          group_info:
-            label: 'Start date (field_start_date)'
-            description: null
-            identifier: field_start_date_value
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items:
-              1: {  }
-              2: {  }
-              3: {  }
-          plugin_id: datetime
       sorts:
         field_start_date_value:
           id: field_start_date_value
@@ -892,7 +800,7 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
-      path: group/%group/events
+      path: group/%group/events2
       defaults:
         fields: true
         group_by: false
@@ -902,7 +810,20 @@ display:
         footer: false
       display_description: ''
       group_by: false
-      header: {  }
+      header:
+        area:
+          id: area
+          table: views
+          field: area
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: false
+          tokenize: true
+          content:
+            value: "{% set day = 1 %}\r\n{% set month = raw_arguments.field_start_date_value_month %}\r\n{% set year = raw_arguments.field_start_date_value_year %}\r\n{% set argDate = date(month~\"/\"~day~\"/\"~year) %}\r\n{% set nextMonth = argDate|date_modify(\"+1 month\") %}\r\n{% set prevMonth = argDate|date_modify(\"-1 month\") %}\r\n{% set nextYear = argDate|date_modify(\"+1 year\") %}\r\n{% set prevYear = argDate|date_modify(\"-1 year\") %}\r\n\r\n<span class=\"month\" style=\"font-size: 2em;\">\r\n  <a href=\"/group/{{ raw_arguments.gid }}/events2/{{ prevMonth|date(\"Y\") }}/{{ prevMonth|date(\"m\") }}\"><i class=\"fas fa-caret-left\"></i></a>\r\n  {{ argDate|date(\"F\") }}&nbsp;&nbsp;\r\n  <a href=\"/group/{{ raw_arguments.gid }}/events2/{{ nextMonth|date(\"Y\") }}/{{ nextMonth|date(\"m\") }}\"><i class=\"fas fa-caret-right\"></i></a>\r\n</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class=\"year\" style=\"font-size: 2em;\">\r\n  <a href=\"/group/{{ raw_arguments.gid }}/events2/{{ prevYear|date(\"Y\") }}/{{ prevYear|date(\"m\") }}\"><i class=\"fas fa-caret-left\"></i></a>\r\n  {{ argDate|date(\"Y\") }}&nbsp;&nbsp;\r\n  <a href=\"/group/{{ raw_arguments.gid }}/events2/{{ nextYear|date(\"Y\") }}/{{ nextYear|date(\"m\") }}\"><i class=\"fas fa-caret-right\"></i></a>\r\n</span>\r\n"
+            format: simple_editor
+          plugin_id: text
       arguments:
         gid:
           id: gid
@@ -940,6 +861,74 @@ display:
           entity_type: group_content
           entity_field: gid
           plugin_id: group_id
+        field_start_date_value_year:
+          id: field_start_date_value_year
+          table: node__field_start_date
+          field: field_start_date_value_year
+          relationship: none
+          group_type: group
+          admin_label: ''
+          default_action: default
+          exception:
+            value: all
+            title_enable: false
+            title: All
+          title_enable: false
+          title: ''
+          default_argument_type: raw
+          default_argument_options:
+            index: 2
+            use_alias: false
+          default_argument_skip_url: false
+          summary_options:
+            base_path: ''
+            count: true
+            items_per_page: 25
+            override: false
+          summary:
+            sort_order: asc
+            number_of_records: 0
+            format: default_summary
+          specify_validation: false
+          validate:
+            type: none
+            fail: 'not found'
+          validate_options: {  }
+          plugin_id: datetime_year
+        field_start_date_value_month:
+          id: field_start_date_value_month
+          table: node__field_start_date
+          field: field_start_date_value_month
+          relationship: none
+          group_type: group
+          admin_label: ''
+          default_action: default
+          exception:
+            value: all
+            title_enable: false
+            title: All
+          title_enable: false
+          title: ''
+          default_argument_type: raw
+          default_argument_options:
+            index: 3
+            use_alias: false
+          default_argument_skip_url: false
+          summary_options:
+            base_path: ''
+            count: true
+            items_per_page: 25
+            override: false
+          summary:
+            sort_order: asc
+            number_of_records: 0
+            format: default_summary
+          specify_validation: false
+          validate:
+            type: none
+            fail: 'not found'
+          validate_options: {  }
+          plugin_id: datetime_month
       title: Events
       footer:
         area:
@@ -950,9 +939,9 @@ display:
           group_type: group
           admin_label: ''
           empty: true
-          tokenize: false
+          tokenize: true
           content:
-            value: '<a href=""><i class="fas fa-caret-left"></i> Previous month</a> | <a href="">Next month <i class="fas fa-caret-right"></i></a>'
+            value: "{% set day = 1 %}\r\n{% set month = raw_arguments.field_start_date_value_month %}\r\n{% set year = raw_arguments.field_start_date_value_year %}\r\n{% set argDate = date(month~\"/\"~day~\"/\"~year) %}\r\n{% set nextMonth = argDate|date_modify(\"+1 month\") %}\r\n{% set prevMonth = argDate|date_modify(\"-1 month\") %}\r\n{% set nextYear = argDate|date_modify(\"+1 year\") %}\r\n{% set prevYear = argDate|date_modify(\"-1 year\") %}\r\n\r\n<span class=\"month\">\r\n  <a href=\"/group/{{ raw_arguments.gid }}/events2/{{ prevMonth|date(\"Y\") }}/{{ prevMonth|date(\"m\") }}\"><i class=\"fas fa-caret-left\"></i></a>\r\n  {{ argDate|date(\"F\") }}&nbsp;&nbsp;\r\n  <a href=\"/group/{{ raw_arguments.gid }}/events2/{{ nextMonth|date(\"Y\") }}/{{ nextMonth|date(\"m\") }}\"><i class=\"fas fa-caret-right\"></i></a>\r\n</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class=\"year\">\r\n  <a href=\"/group/{{ raw_arguments.gid }}/events2/{{ prevYear|date(\"Y\") }}/{{ prevYear|date(\"m\") }}\"><i class=\"fas fa-caret-left\"></i></a>\r\n  {{ argDate|date(\"Y\") }}&nbsp;&nbsp;\r\n  <a href=\"/group/{{ raw_arguments.gid }}/events2/{{ nextYear|date(\"Y\") }}/{{ nextYear|date(\"m\") }}\"><i class=\"fas fa-caret-right\"></i></a>\r\n</span>\r\n"
             format: simple_editor
           plugin_id: text
     cache_metadata:
